# 2024AOC

./: README.md  pyproject.toml
docs/: index.html
html/: day1.html
notebooks/: 01_Day.ipynb  template.ipynb
