[project]
name = "2024adventofcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ft-jupyter",
    "python-fasthtml>=0.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.5.5",
]

[tool.uv.sources]
ft-jupyter = { git = "https://github.com/banditburai/ft-jupyter.git" }
